changing front page and projects section

--- a/about.html
+++ b/about.html
@@ -60,12 +60,12 @@
       Let me tell you a few things...
     </h2>
     <div class="about-info">
-      <img src="img/portrait.jpg" alt="John Doe" class="bio-image">
+      <img src="img/hash.jpg" alt="Jacob Rozak" class="bio-image">
 
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
-        <p>Hi, I'm Jacob, a self-taught JavaScript Developer based in London, UK.  Backend developer working off Node.js and MongoDB. I've built websites, APIs, servers, mobile apps, and desktop apps. While I specialize in backend Node.js, I've also worked with React.js, HTML, CSS, and client-side JS.
-          Meet-up addict, passionate about learning tools and techniques required in professional web development through competitive coding and portfolio building. I often collaborate with Developers with various skills and knowledge attending manifold meet-ups. I am fortunate to be in an environment which allows me to pair program, work in groups, learn new techniques of solving problems, and learn different ways of thinking from experienced developers, accelerating my learning and ability to adapt in a professional environment.
+        <p>Hi, I'm Jacob, a self-taught JavaScript Developer based in London, UK. Also have some experience with Backend development, working off Node.js and MongoDB. I've built websites, APIs, servers, mobile apps, and desktop apps. While I specialize in backend Node.js, I've also worked with React.js, HTML, CSS, and client-side JS.
+          Meet-up addict, passionate about learning tools and techniques required in professional web development through competitive coding and computer science challanges. I often collaborate with Developers with various skills and knowledge attending manifold meet-ups. I am fortunate to be in an environment which allows me to pair program, work in groups as well as learn new techniques of solving problems.
           I am immediately available for permanent roles in Frontend Development.
           
          </p>
