--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <title>Jacob Rozak</title>
 </head>
 
-<body id="bg-img">
+<!--<body id="bg-img"></body>-->
+<body>
+    <video autoplay muted loop id="myVideo">
+        <source src="space.MP4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
+  
   <header>
     <div class="menu-btn">
       <div class="btn-line"></div>
@@ -48,7 +54,7 @@
       </ul>
     </nav>
   </header>
-
+<div class="content">
   <main id="home">
     <h1 class="lg-heading">
       Jacob
@@ -74,6 +80,7 @@
   <footer id="main-footer">
     Jacob Rozak &copy; 2018
   </footer>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
