--- a/work.html
+++ b/work.html
@@ -58,38 +58,47 @@
       Here is some of my work
     </h2>
     <div class="projects">
-      <div class="item">
+      <div class="item" onclick="work()">
         <a href="#!">
           <img src="img/projects/project1.png" alt="Project">
         </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+        <div class="card" id ="card">
+            <p>Book-marker that saves websides URl using localStorage</p>
+        <a href="https://jacobrozak.github.io/Book-Keeper/" class="btn-light">
+          <i class="fas fa-eye"></i> Demo
         </a>
-        <a href="#" class="btn-dark">
-          <i class="fab fa-github"></i> Github
+        <a href="https://github.com/JacobRozak/Book-Keeper" class="btn-dark">
+          <i class="fab fa-github"></i> Github repo
         </a>
       </div>
-      <div class="item">
+      </div>
+      <div class="item" onclick="work1()">
         <a href="#!">
           <img src="img/projects/project2.png" alt="Project">
         </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+        <div class='card' id='card1'>
+            <p>Converter writen in vanilla JavaScript</p>
+        <a href="https://jacobrozak.github.io/Conventer/" class="btn-light">
+          <i class="fas fa-eye"></i> demo
         </a>
-        <a href="#" class="btn-dark">
-          <i class="fab fa-github"></i> Github
+        <a href="https://github.com/JacobRozak/Conventer" class="btn-dark">
+          <i class="fab fa-github"></i> Github repo
         </a>
       </div>
-      <div class="item">
+      </div>
+      <div class="item" onclick='work2()'>
         <a href="#!">
           <img src="img/projects/project3.png" alt="Project">
         </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+        <div class="card" id="card2">
+        <p>A simple and elegant Pomodoro Clock with customizable break and session times. </p>
+        <a href="https://jacobrozak.github.io/Pomodoro-timer/" class="btn-light">
+          <i class="fas fa-eye"></i> demo
         </a>
-        <a href="#" class="btn-dark">
-          <i class="fab fa-github"></i> Github
+        <a href="https://github.com/JacobRozak/Pomodoro-timer" class="btn-dark">
+          <i class="fab fa-github"></i> Github repo
         </a>
+        </div>
       </div>
       <div class="item">
         <a href="#!">
