addigng few projects to the work file

--- a/work.html
+++ b/work.html
@@ -100,29 +100,34 @@
         </a>
         </div>
       </div>
-      <div class="item">
+      <div class="item" onclick='work3()'>
         <a href="#!">
-          <img src="img/projects/project4.jpg" alt="Project">
+          <img src="img/projects/project4.png" alt="Project">
         </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+        <div class="card" id="card3">
+        <p>Online games store written in react.js </p>
+        <a href="https://jacobrozak.github.io/Pomodoro-timer/" class="btn-light">
+          <i class="fas fa-eye"></i> demo
         </a>
-        <a href="#" class="btn-dark">
-          <i class="fab fa-github"></i> Github
+        <a href="https://github.com/JacobRozak/Pomodoro-timer" class="btn-dark">
+          <i class="fab fa-github"></i> Github repo
         </a>
+        </div>
       </div>
-      <div class="item">
+      <div class="item" onclick='work4()'>
         <a href="#!">
-          <img src="img/projects/project5.jpg" alt="Project">
+          <img src="img/projects/project5.png" alt="Project">
         </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+        <div class="card" id="card3">
+        <p>Sliding gallery </p>
+        <a href="https://jacobrozak.github.io/Pomodoro-timer/" class="btn-light">
+          <i class="fas fa-eye"></i> demo
         </a>
-        <a href="#" class="btn-dark">
-          <i class="fab fa-github"></i> Github
+        <a href="https://jacobrozak.github.io/full-screen-gallery/" class="btn-dark">
+          <i class="fab fa-github"></i> Github repo
         </a>
+        </div>
       </div>
-    </div>
   </main>
 
   <footer id="main-footer">
