--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--<body id="bg-img"></body>-->
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="space.MP4" type="video/mp4">
+        <source src="https://s3.eu-west-2.amazonaws.com/jacobrozak.com/space.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
   
