--- a/work.html
+++ b/work.html
@@ -106,10 +106,10 @@
         </a>
         <div class="card" id="card3">
         <p>Online games store written in react.js </p>
-        <a href="https://jacobrozak.github.io/Pomodoro-timer/" class="btn-light">
+        <a href=" https://jacobrozak.github.io/full-screen-gallery/" class="btn-light">
           <i class="fas fa-eye"></i> demo
         </a>
-        <a href="https://github.com/JacobRozak/Pomodoro-timer" class="btn-dark">
+        <a href="https://github.com/JacobRozak/full-screen-gallery" class="btn-dark">
           <i class="fab fa-github"></i> Github repo
         </a>
         </div>
@@ -118,12 +118,12 @@
         <a href="#!">
           <img src="img/projects/project5.png" alt="Project">
         </a>
-        <div class="card" id="card3">
+        <div class="card" id="card4">
         <p>Sliding gallery </p>
-        <a href="https://jacobrozak.github.io/Pomodoro-timer/" class="btn-light">
+        <a href="https://github.com/JacobRozak/Shopping-Cart-React.js" class="btn-light">
           <i class="fas fa-eye"></i> demo
         </a>
-        <a href="https://jacobrozak.github.io/full-screen-gallery/" class="btn-dark">
+        <a href="https://github.com/JacobRozak/Shopping-Cart-React.js" class="btn-dark">
           <i class="fab fa-github"></i> Github repo
         </a>
         </div>
